drupal styling: added overflow-x: scroll; to the html element to force the side scroll bars to always appear - stops horizontal shifting when the page gets taller/shorter

--- a/web/drupal/sites/all/themes/robogrid/style.css
+++ b/web/drupal/sites/all/themes/robogrid/style.css
@@ -26,6 +26,7 @@ body,div,ul,ol,li,pre,blockquote,img,form,a {
 }
 html {
 	background-color: #636363;
+	overflow-y: scroll;
 }
 body {
 	font: 0.74em Arial, sans-serif;
